fix event text overflow

--- a/resources/assets/sass/_schedule.scss
+++ b/resources/assets/sass/_schedule.scss
@@ -178,3 +178,9 @@
   padding: 5px 5px;
   font-size: 10px;
 }
+
+.event-text,
+.event-start,
+.event-end {
+  overflow: hidden;
+}
